Created Shop and Shop menu

--- a/.gitignore
+++ b/.gitignore
@@ -1127,3 +1127,149 @@ Assets/Design/Tiles/Mountains/mountain_landscape_99.asset.meta
 Assets/Design/Tiles/Mountains/Mountains.prefab
 Assets/Design/Tiles/Mountains/Mountains.prefab.meta
 Assets/Design/Tiles/Path and Objects/PathAndObjects.png.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1.png
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1.png.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_0.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_0.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_1.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_1.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_10.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_10.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_11.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_11.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_12.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_12.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_13.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_13.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_14.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_14.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_15.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_15.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_16.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_16.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_17.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_17.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_18.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_18.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_19.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_19.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_2.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_2.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_20.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_20.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_21.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_21.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_22.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_22.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_23.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_23.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_24.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_24.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_25.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_25.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_26.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_26.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_27.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_27.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_28.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_28.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_29.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_29.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_3.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_3.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_30.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_30.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_31.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_31.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_32.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_32.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_33.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_33.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_34.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_34.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_35.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_35.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_36.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_36.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_37.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_37.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_38.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_38.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_39.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_39.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_4.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_4.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_40.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_40.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_41.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_41.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_42.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_42.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_43.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_43.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_44.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_44.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_45.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_45.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_46.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_46.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_47.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_47.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_48.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_48.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_49.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_49.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_5.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_5.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_50.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_50.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_51.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_51.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_52.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_52.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_53.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_53.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_54.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_54.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_55.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_55.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_56.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_56.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_57.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_57.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_58.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_58.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_59.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_59.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_6.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_6.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_60.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_60.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_61.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_61.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_62.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_62.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_63.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_63.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_64.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_64.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_65.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_65.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_66.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_66.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_67.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_67.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_68.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_68.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_69.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_69.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_7.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_7.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_70.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_70.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_71.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_71.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_8.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_8.asset.meta
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_9.asset
+Assets/Design/Tiles/Indoor/tilesetformattedupdate1_9.asset.meta
