--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ $RECYCLE.BIN/
 .idea
 Assets/Design/Tiles/
 Assets/Audio/
+Assets/Design/UI/Background/background.png
+Assets/Design/UI/Background/background.png.meta
