Battle system update

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,40 @@ Assets/Design/Tiles/
 Assets/Audio/
 Assets/Design/UI/Background/background.png
 Assets/Design/UI/Background/background.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/aerocephal.png
+Assets/Design/Sprites/allacrost_enemy_sprites/aerocephal.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/arcana_drake.png
+Assets/Design/Sprites/allacrost_enemy_sprites/arcana_drake.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/aurum-drakueli.png
+Assets/Design/Sprites/allacrost_enemy_sprites/aurum-drakueli.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/bat.png
+Assets/Design/Sprites/allacrost_enemy_sprites/bat.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/daemarbora.png
+Assets/Design/Sprites/allacrost_enemy_sprites/daemarbora.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/deceleon.png
+Assets/Design/Sprites/allacrost_enemy_sprites/deceleon.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/demonic_essence.png
+Assets/Design/Sprites/allacrost_enemy_sprites/demonic_essence.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/dune_crawler.png
+Assets/Design/Sprites/allacrost_enemy_sprites/dune_crawler.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/green_slime.png
+Assets/Design/Sprites/allacrost_enemy_sprites/green_slime.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/nagaruda.png
+Assets/Design/Sprites/allacrost_enemy_sprites/nagaruda.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/rat.png
+Assets/Design/Sprites/allacrost_enemy_sprites/rat.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/scorpion.png
+Assets/Design/Sprites/allacrost_enemy_sprites/scorpion.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/scorpion_goliath.png
+Assets/Design/Sprites/allacrost_enemy_sprites/scorpion_goliath.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/skeleton.png
+Assets/Design/Sprites/allacrost_enemy_sprites/skeleton.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/snake.png
+Assets/Design/Sprites/allacrost_enemy_sprites/snake.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/spider.png
+Assets/Design/Sprites/allacrost_enemy_sprites/spider.png.meta
+Assets/Design/Sprites/allacrost_enemy_sprites/stygian_lizard.png
+Assets/Design/Sprites/allacrost_enemy_sprites/stygian_lizard.png.meta
+Assets/Design/Sprites/enemies.png
+Assets/Design/Sprites/enemies.png.meta
