--- a/.gitignore
+++ b/.gitignore
@@ -106,8 +106,9 @@ $RECYCLE.BIN/
 
 # Pycharm project
 .idea
+Assets/
 Assets/Design/Tiles/
-Assets/Audio/
+Assets/
 Assets/Sprite/
 Assets/Design/
 Assets/Design/UI/Background/background.png
