--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ $RECYCLE.BIN/
 Assets/Design/Tiles/
 
 Assets/Sprite/
+Assets/Audio/
 Assets/Design/
 Assets/Design/UI/Background/background.png
 Assets/Design/UI/Background/background.png.meta
